# shiparr

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  TRACKING.md  WARP.md  debug_db.py  deployarr-guide.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml  tag-release.yml
config/projects/: dashy.yaml
docs/: api.md  architecture.md  configuration.md  development.md  index.md  installation.md
src/Shiparr/: __init__.py  app.py  auth.py  config.py  database.py  deployer.py  git_manager.py  logging_utils.py  models.py  notifications.py  queue_manager.py  scheduler.py  sops_manager.py
src/Shiparr/routes/: api.py  dashy.py  logs.py
src/deployarr/: app.py  database.py  git_manager.py
src/deployarr/routes/: __init__.py  api.py  dashy.py
tests/: conftest.py  test_api.py  test_api_logs.py  test_app_sync_config.py  test_auth_utils.py  test_config.py  test_config_path.py  test_config_sanitization.py  test_config_validation.py  test_database.py  test_deployer.py  test_deployer_healthcheck.py  test_deployer_prune.py  test_git_manager.py  test_git_manager_remote_cache.py  test_git_robustness.py  test_logging_utils.py  test_notifications.py  test_queue_manager.py  test_routes_api_extended.py  test_routes_dashy_helpers.py  test_scheduler.py  test_sops_manager.py  test_sqlite_concurrency.py
